add card et al (2011)

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,20 +1,45 @@
-% Encoding: UTF-8
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-@Article{lindo2018college,
-  author  = {Lindo, Jason M and Siminski, Peter and Swensen, Isaac D},
-  title   = {College party culture and sexual assault},
-  journal = {American Economic Journal: Applied Economics},
-  year    = {2018},
-  volume  = {10},
-  number  = {1},
-  pages   = {236--65},
-}
+%% Created for Marc Fabel at 2020-05-08 18:28:25 +0200 
 
-@Article{hener2019noise,
-  author  = {Hener, Timo},
-  title   = {{Noise Pollution and Violent Crime}},
-  journal = {mimeo},
-  year    = {2019},
-}
 
-@Comment{jabref-meta: databaseType:bibtex;}
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:bibtex;}
+
+
+
+@article{card2011family,
+	Abstract = {{We study the link between family violence and the emotional cues associated with wins and losses by professional football teams. We hypothesize that the risk of violence is affected by the ``gain-loss'' utility of game outcomes around a rationally expected reference point. Our empirical analysis uses police reports of violent incidents on Sundays during the professional football season. Controlling for the pregame point spread and the size of the local viewing audience, we find that upset losses (defeats when the home team was predicted to win by four or more points) lead to a 10\\% increase in the rate of at-home violence by men against their wives and girlfriends. In contrast, losses when the game was expected to be close have small and insignificant effects. Upset wins (victories when the home team was predicted to lose) also have little impact on violence, consistent with asymmetry in the gain-loss utility function. The rise in violence after an upset loss is concentrated in a narrow time window near the end of the game and is larger for more important games. We find no evidence for reference point updating based on the halftime score.}},
+	Author = {Card, David and Dahl, Gordon B.},
+	Date-Added = {2020-05-08 18:25:43 +0200},
+	Date-Modified = {2020-05-08 18:28:25 +0200},
+	Doi = {10.1093/qje/qjr001},
+	Eprint = {https://academic.oup.com/qje/article-pdf/126/1/103/17089919/qjr001.pdf},
+	Issn = {0033-5533},
+	Journal = {{The Quarterly Journal of Economics}},
+	Month = {02},
+	Number = {1},
+	Pages = {103-143},
+	Title = {{Family Violence and Football: The Effect of Unexpected Emotional Cues on Violent Behavior}},
+	Url = {https://doi.org/10.1093/qje/qjr001},
+	Volume = {126},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1093/qje/qjr001}}
+
+@article{lindo2018college,
+	Author = {Lindo, Jason M and Siminski, Peter and Swensen, Isaac D},
+	Journal = {American Economic Journal: Applied Economics},
+	Number = {1},
+	Pages = {236--65},
+	Title = {College party culture and sexual assault},
+	Volume = {10},
+	Year = {2018}}
+
+@article{hener2019noise,
+	Author = {Hener, Timo},
+	Journal = {mimeo},
+	Title = {{Noise Pollution and Violent Crime}},
+	Year = {2019}}
